--- a/deploy-as-code/charts/common/templates/_ingress.yaml
+++ b/deploy-as-code/charts/common/templates/_ingress.yaml
@@ -1,67 +1,73 @@
 {{- define "common.ingress" -}}
 {{- if .Values.ingress.enabled -}}
 ---
-apiVersion: networking.k8s.io/v1 
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: {{ template "common.name" . }}
 {{- if .Values.global.namespace }}
   namespace: {{ .Values.global.namespace }}
 {{- else if .Values.ingress.namespace }}
-  namespace: {{ .Values.ingress.namespace }}    
-{{- else }}  
-  namespace: {{ .Values.namespace }}  
-{{- end }}     
+  namespace: {{ .Values.ingress.namespace }}
+{{- else }}
+  namespace: {{ .Values.namespace }}
+{{- end }}
   annotations:
-{{- toYaml .Values.ingress.annotations | nindent 4 }}   
-{{- if .Values.ingress.waf.enabled }}      
-{{- toYaml .Values.ingress.waf.annotations | nindent 4 }} 
-{{- end  }}
-{{- if .Values.ingress.additionalAnnotations }}                                   
-  {{- tpl  .Values.ingress.additionalAnnotations . | nindent 4 }}
-{{- end }} 
+{{- toYaml .Values.ingress.annotations | nindent 4 }}
+{{- if .Values.ingress.waf.enabled }}
+{{- toYaml .Values.ingress.waf.annotations | nindent 4 }}
+{{- end }}
+{{- if .Values.ingress.additionalAnnotations }}
+  {{- tpl .Values.ingress.additionalAnnotations . | nindent 4 }}
+{{- end }}
   labels:
-{{- include "common.labels" . | nindent 4 }}                            
+{{- include "common.labels" . | nindent 4 }}
 spec:
   rules:
-{{- if .Values.ingress.host }}   
-  {{- tpl  .Values.ingress.host . | nindent 2 }}
-{{- else if .Values.ingress.hostName }} 
+{{- if .Values.ingress.host }}
+  {{- tpl .Values.ingress.host . | nindent 2 }}
+{{- else if .Values.ingress.hostName }}
   - host: {{ .Values.ingress.hostName }}
-{{- else }}  
-  - host: {{ .Values.global.domain }}
-{{- end }}  
+{{- else }}
+  - host: {{ .Values.global.domain | default "" }}
+{{- end }}
     http:
       paths:
       - backend:
-{{- if .Values.ingress.zuul }}          
+{{- if .Values.ingress.zuul }}
           service:
             name: gateway
             port:
               number: 8080
-{{ else }}
+{{- else }}
           service:
             name: {{ .Values.ingress.serviceName | default (include "common.name" .) }}
             port:
               number: {{ .Values.ingress.servicePort | default .Values.httpPort }}
-{{- end }}            
+{{- end }}
         path: /{{ .Values.ingress.context }}
         pathType: Prefix
-{{- if ne .Values.global.setup "quickstart" }}        
+{{- if ne .Values.global.setup "quickstart" }}
   tls:
-{{- if .Values.ingress.tls }}
-  {{- tpl  .Values.ingress.tls . | nindent 2 }}
-{{- else }} 
-{{- if .Values.ingress.hostName }}
-  - hosts: 
-    - {{ .Values.ingress.hostName }}
-    secretName: {{ .Values.ingress.hostName }}-tls-certs  
-{{- else }}      
+{{- if .Values.ingress.tls.enabled }}
   - hosts:
-    - {{ .Values.global.domain }}
-    secretName: {{ .Values.global.domain }}-tls-certs 
-{{- end }} 
-{{- end }} 
+    {{- range .Values.ingress.tls.hosts }}
+    - {{ . | quote }}
+    {{- end }}
+    secretName: {{ .Values.ingress.tls.secretName | quote }}
+{{- else if .Values.ingress.hostName }}
+  - hosts:
+    - {{ .Values.ingress.hostName | quote }}
+    secretName: {{ .Values.ingress.hostName }}-tls-certs
+{{- else if .Values.global.domain }}
+  - hosts:
+    - {{ .Values.global.domain | quote }}
+    secretName: {{ .Values.global.domain }}-tls-certs
+{{- else }}
+  - hosts:
+    - egov-indexer.default.com  # Fallback domain
+    secretName: egov-indexer-tls
 {{- end }}
-{{- end -}} 
-{{- end -}} 
+{{- end }}
+{{- end -}}
+{{- end -}}
